--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -4,8 +4,8 @@
             <a class="brand-new" href="#">National Convergence Initiative</a>
             <div class="nav-collapse collapse">
                 <ul class="nav">
-                    <li class="active">
-                        <a href="#">Home</a>
+                    <li class="">
+                        <a href="/home">Home</a>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">About Us <b class="caret"></b></a>
@@ -50,7 +50,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="">
+                    <li class="active">
                         <a href="/contact">Contact Us</a>
                     </li>
                 </ul>
@@ -59,6 +59,4 @@
     </div>
 </div>
 
-<div class="container">
-    <p>This is the main view.</p>
-</div>
+<p>This is the contact view.</p>
