--- a/app/views/report.html
+++ b/app/views/report.html
@@ -4,8 +4,8 @@
             <a class="brand-new" href="#">National Convergence Initiative</a>
             <div class="nav-collapse collapse">
                 <ul class="nav">
-                    <li class="active">
-                        <a href="#">Home</a>
+                    <li class="">
+                        <a href="/home">Home</a>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">About Us <b class="caret"></b></a>
@@ -39,16 +39,8 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Reports and Resource Materials <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="/report#report">Reports</a>
-                            </li>
-                            <li>
-                                <a href="/report#materials">Resource Materials</a>
-                            </li>
-                        </ul>
+                    <li class=" active">
+                        <a href="#">Reports and Resource Materials</a>
                     </li>
                     <li class="">
                         <a href="/contact">Contact Us</a>
@@ -59,6 +51,4 @@
     </div>
 </div>
 
-<div class="container">
-    <p>This is the main view.</p>
-</div>
+<p>This is the report view.</p>
